--- a/views/templates/form.html
+++ b/views/templates/form.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Rising Star Travel</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
-    <link rel="stylesheet" href="../../_style/main.css">
+    <link rel="stylesheet" href="/_style/main.css">
   </head>
   <body ng-controller="Main as main">
     <div class="container-fluid">
