made styling changes to home.html and table.html

--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -6,15 +6,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Rising Star Travel</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
+    <link href='https://fonts.googleapis.com/css?family=Indie+Flower' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="/_style/main.css">
   </head>
   <body>
-  <div class="navbar navbar-inverse navbar-fixed-top" style="text-align: center;">
+  <div class="navbar navbar-fixed-top" style="text-align: center;">
    <div class="container"
-    <div class="navbar-text" style="padding-top: 10px; font-size: 20px;">
-      <a href="/#/" style="padding-right: 10px;">Home</a>
-      <a href="/#/artists" style="padding-right: 10px;">Current Intineraries</a>
-      <a href="/#/itinerary/create" style="padding-right: 10px;">Create Itinerary</a>
+    <div class="navbar-text" style="padding-top: 10px; font-size: 18px; font-family: 'Indie Flower', cursive;">
+      <a href="/#/" style="padding-right: 30px;">Home</a>
+      <a href="/#/artists" style="padding-right: 30px;">Current Intineraries</a>
+      <a href="/#/itinerary/create" style="padding-right: 30px;">Create Itinerary</a>
     </div>
    </div>
   </div>
