--- a/www/js/templates/home.html
+++ b/www/js/templates/home.html
@@ -1,8 +1,9 @@
 <div class="homepage-hero">
-	<div class="text-header">
-		<h1 style="padding-top: 50px; text-align: center;">{{main.message}}</h1>
+	<div class="container">
+		<div class="col-md-3"></div>
+		<div class="logo-image col-md-6" style="padding-top: 100px;">
+	  		<img src="_style/images/rstblack.jpg" style="min-width: 200px; min-height: 200px;">
+	  	</div>
+	  	<div class="col-md-3"></div>
 	</div>
-	<div class="logo-image">
-  		<img src="./js/templates/rstblack.jpg" style="min-width: 200px; min-height: 200px;">
-  	</div>
 </div>
