--- a/www/js/templates/table.html
+++ b/www/js/templates/table.html
@@ -1,5 +1,6 @@
 <h2 style="padding-top: 50px; text-align: center; font-size: 35px;">Artist Itineraries</h2>
 
 <ul ng-repeat="itinerary in main.itineraries">
-  <li style="font-size: 25px;"><a href="#/itinerary/{{itinerary.artist}}">{{itinerary.artist}}</a></li>
+  <li style="font-size: 25px; font-family: 'Indie Flower', cursive";
+><a href="#/itinerary/{{itinerary.artist}}">{{itinerary.artist}}</a></li>
 </ul>
