made changes to navbar and made styling changes

--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -7,15 +7,17 @@
     <title>Rising Star Travel</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
     <link href='https://fonts.googleapis.com/css?family=Indie+Flower' rel='stylesheet' type='text/css'>
+    <link href='https://fonts.googleapis.com/css?family=Ubuntu+Condensed' rel='stylesheet' type='text/css'>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="/_style/main.css">
   </head>
   <body>
   <div class="navbar navbar-fixed-top" style="text-align: center;">
    <div class="container"
     <div class="navbar-text" style="padding-top: 10px; font-size: 18px; font-family: 'Indie Flower', cursive;">
-      <a href="/#/" style="padding-right: 30px;">Home</a>
-      <a href="/#/artists" style="padding-right: 30px;">Current Intineraries</a>
-      <a href="/#/itinerary/create" style="padding-right: 30px;">Create Itinerary</a>
+      <a href="/#/" style="padding-right: 30px;"><i class="fa fa-home"></i>Home</a>
+      <a href="/#/artists" style="padding-right: 30px;"><i class="fa fa-file-text-o"></i>Current Intineraries</a>
+      <a href="/#/itinerary/create" style="padding-right: 30px;"><i class="fa fa-pencil-square-o"></i>Create Itinerary</a>
     </div>
    </div>
   </div>
