--- a/www/js/templates/form.html
+++ b/www/js/templates/form.html
@@ -4,7 +4,7 @@
       <div class="col-md-6 col-sm-offset-3 text-center">
        <div style="padding-top: 50px;">
         <h4>Date</h4>
-          <input ng-model="main.itinerary.date" id="date" class="form-control input-md text-center" name="date" type="text" placeholder="mm/dd/yyyy">
+          <input ng-model="main.itinerary.date" id="date" class="form-control input-md text-center" name="date" type="date" placeholder="mm/dd/yyyy">
         </div>
           <hr>
           <div>
@@ -33,12 +33,12 @@
           <hr>
            <div>
             <h4>Check In / Pick Up</h4>
-             <input ng-model="main.itinerary.checkin" id="checkin" class="form-control input-md text-center" name="checkin" type="text" placeholder="check in / p/u">
+             <input ng-model="main.itinerary.checkin" id="checkin" class="form-control input-md text-center" name="checkin" type="date" placeholder="check in / p/u">
             </div>
             <hr>
           <div>
             <h4>Check Out / Drop Off</h4>
-              <input ng-model="main.itinerary.checkout" id"checkout" class="form-control input-md text-center" name="checkout" type="text" placeholder="check out / d/o">
+              <input ng-model="main.itinerary.checkout" id"checkout" class="form-control input-md text-center" name="checkout" type="date" placeholder="check out / d/o">
             </div>
             <hr>
          <div>
