added email functionality to app using nodemailer

--- a/www/js/templates/form.html
+++ b/www/js/templates/form.html
@@ -67,7 +67,7 @@
              </div>
             <hr>
            <input class="btn btn-info btn-lg" type="submit" value="Save">
-          <input class="btn btn-info btn-lg" type="submit" value="Send">
+          <button class="btn btn-info btn-lg" ng-click="main.sendEmail()">Send</button>
         </div>
        </form>
       </div>
