--- a/www/js/templates/list.html
+++ b/www/js/templates/list.html
@@ -68,6 +68,6 @@
 	<hr>
      <h4 style="text-align: center;"><a href="#/itinerary/create/{{itinerary._id}}">Edit</a></h4>
      <div style="text-align: center;">
-     <input type="submit" class="btn btn-info" value="Send">
+     <button class="btn btn-info btn-lg" ng-click="main.sendEmail()">Send</button>
      </div>
 
